fix z-index home

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -32,6 +32,7 @@
     justify-content: start;
     align-items: center;
     width: 100%;
+    z-index: -1;
 }
 
 .creative-home h1 {
